# teaching

./: .gitignore  README.md  setup.cfg
teaching/: acting.py  fillgrades.py  functions.py  grading.py  mailing.py  matching.py  splitgrades.py
tests/: acta_20260213_111757.xlsx  acta_20260213_111837.xlsx  acta_20260213_112134.xlsx  acta_20260213_112332.xlsx  acta_20260213_112941.xlsx  graded_grades_list.csv  graded_grades_list.tex  graded_mailing.csv  scans_mailing.csv
tests/listas/actas/:  Acta_2024-25_1710001_1_0_TER.xlsx
tests/listas/blackboard/csv/: gc_202425-1710001-T-E1_fullgc_2024-11-13-19-26-09.csv  gc_202425-1710001-T-E2_columns_2024-11-13-19-25-43.csv
tests/listas/blackboard/xls/: gc_202425-1710001-T-E1_fullgc_2024-11-13-19-11-07.xls  gc_202425-1710001-T-E1_fullgc_2024-11-13-19-11-07_filled.csv  gc_202425-1710001-T-E2_columns_2024-11-13-19-25-12.xls  gc_202425-1710001-T-E2_columns_2024-11-13-19-25-12_filled.csv
tests/listas/sevius/: AB1M.xlsx  AB2M.xlsx  AB3IM.xlsx  AB3M.xlsx  AB4FM.xlsx  AB4ME.xlsx  AB5IM.xlsx  AB5M.xlsx  AB6M.xlsx  AB6ME.xlsx
