[metadata]
name = teaching
version = 0.1.1
author = Fernando Muro
author_email = fmuro@us.es
description = teaching CLI utilities
license = GPL-3.0

[options]
packages = teaching
install_requires =
    thefuzz
    numpy
    scipy
    tabulate
    unidecode
    pandas
    openpyxl
extras_requires =
    python-Levenshtein

[options.entry_points]
console_scripts =
    matching = teaching.matching:function
    splitgrades = teaching.splitgrades:function
    grading = teaching.grading:function
    mailing = teaching.mailing:function

[options.package_data]
teaching = *