[metadata]
name = teaching
version = 0.2
author = Fernando Muro
author_email = fmuro@us.es
description = teaching CLI utilities
license = GPL-3.0

[options]
packages = teaching
install_requires =
    thefuzz
    numpy
    scipy
    tabulate
    unidecode
    pandas
    openpyxl
extras_requires =
    python-Levenshtein

[options.entry_points]
console_scripts =
    matching = teaching.matching:function
    grading = teaching.grading:function
    mailing = teaching.mailing:function
    acting = teaching.acting:function
    splitgrades = teaching.splitgrades:function

[options.package_data]
teaching = *